--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   localstack:
     container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
     image: localstack/localstack
+    networks:
+      - localstack
     ports:
       - "127.0.0.1:4566:4566" # LocalStack Gateway
       - "127.0.0.1:4510-4559:4510-4559" # external services port range
@@ -13,3 +15,16 @@ services:
     volumes:
       - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
+  # TODO: Add FastAPI service to the docker-compose.yml and connect it to the localstack network
+  # api:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   networks:
+  #     - localstack
+  #   ports:
+  #     - "8000:8000"
+  # command: ["fastapi", "dev", "app/app.py", "--port", "8000"]
+networks:
+  localstack:
+    driver: bridge
